--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             text-align: center;
         }
         h1{
-            font-family: 'Estonia', cursive;;
+            font-family: 'Estonia', cursive;
         }
         p{
-            font-family:'Comfortaa', cursive;;
+            font-family:'Comfortaa', cursive;
             font-weight: 600;
             font-size: 11px;
         }
